--- a/style.css
+++ b/style.css
@@ -19,13 +19,30 @@ main {
 }
 
 main article {
-    margin-bottom: 50px;
     -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.43); 
     box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.43);
     border: 1px solid black;
     padding: 15px;
-    margin: 100px auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
     height: 180px;
+    border-radius: 30px;
+    width: 500px;
+    background-color: rgb(236, 236, 236);
+}
+
+main #saved-to-do {
+    text-align: left;
+    -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.43); 
+    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.43);
+    border: 1px solid black;
+    padding: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    height: 700px;
     border-radius: 30px;
     width: 500px;
     background-color: rgb(236, 236, 236);
@@ -58,7 +75,7 @@ main article input {
     border-color: rgb(255,31,79);
 }
 
-main article button {
+main article #button-submit {
     margin-top: 20px;
     margin-left: 210px;
     display: block;
@@ -67,4 +84,24 @@ main article button {
     border-style: none;
     border-radius: 10px;
     background-color: rgba(58,232,255,1);
+}
+
+main p {
+    display: inline;
+    font-weight: 600;
+    margin-left: 20px;
+    margin-top: 10px;
+    font-size: 1.5em;
+}
+
+main button {
+    margin-left: 10px;
+}
+
+main div {
+    padding: 5px;
+}
+
+main button {
+    background-color: red;
 }
